@@ -1,3 +1,9 @@
+2008-12-08  Christophe Romain <christophe.romain@process-one.net>
+
+	* src/ejabberd_c2s.erl: Reduce memory consumption due to caps handling
+	* src/mod_pubsub/mod_pubsub.erl: Likewise
+	* src/mod_caps.erl: Likewise
+
 2008-12-08  Mickael Remond  <mremond@process-one.net>
 
 	* src/ejabberd_c2s.erl: Enforce client stanza from attribute
@@ -7,7 +13,7 @@
 2008-12-01  Badlop  <badlop@process-one.net>
 
 	* doc/guide.tex: New subsection Database Connection
-	* doc/guide.html: Like	wise
+	* doc/guide.html: Likewise
 
 2008-12-01  Christophe Romain <christophe.romain@process-one.net>
 
